--- a/vue/produits.html
+++ b/vue/produits.html
@@ -59,10 +59,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -71,10 +71,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -83,10 +83,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -95,10 +95,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-           <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+           <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
         <article class="card" data-tilt>
@@ -106,10 +106,10 @@
           <h3>Materiel informatique</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -118,10 +118,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -130,10 +130,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -142,10 +142,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-           <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+           <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
       <article class="card" data-tilt>
@@ -153,10 +153,10 @@
           <h3>Costume pour homme</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -165,10 +165,10 @@
           <h3>Costume pour homme</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -177,10 +177,10 @@
           <h3>Costume pour homme</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -189,10 +189,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
        <article class="card" data-tilt>
@@ -200,10 +200,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-           <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -212,10 +212,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -224,10 +224,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -236,10 +236,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-comments"></i>
-             <i class=" icon fas fa-star"></i>
-             <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
     </div>
