--- a/vue/services.html
+++ b/vue/services.html
@@ -58,10 +58,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -70,10 +70,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -82,10 +82,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -94,10 +94,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
         <article class="card" data-tilt>
@@ -105,10 +105,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -117,10 +117,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -129,10 +129,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -141,10 +141,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
       <article class="card" data-tilt>
@@ -152,10 +152,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -164,10 +164,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -176,10 +176,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -188,10 +188,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
        <article class="card" data-tilt>
@@ -199,10 +199,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -211,10 +211,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -223,10 +223,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
 
@@ -235,10 +235,10 @@
           <h3>Ticot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
-            <i class=" icon fas fa-share-alt"></i>
-            <i class=" icon fas fa-heart"></i>
-            <i class=" icon fas fa-shopping-cart"></i>
-            <i class=" icon fas fa-comments"></i>
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
           </div>
       </article>
     </div>
