--- a/vue/formation_certification.html
+++ b/vue/formation_certification.html
@@ -54,7 +54,7 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-          <img src="../vue/images/a.png" alt="">
+          <img src="../vue/images/h.jpg" alt="">
           <h3>Equipements reseaux</h3>
           <p> Switches</h3>
           <div class="alignements_icones">
@@ -78,7 +78,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/c.png" alt="">
+        <img src="../vue/images/image3.jpg" alt="">
           <h3>Equipements reseaux</h3>
           <p> Point d'access Wi-Fi</h3>
           <div class="alignements_icones">
@@ -90,7 +90,7 @@
       </article>
 
       <article class="card" data-tilt>
-       <img src="../vue/images/d.jpg" alt="">
+       <img src="../vue/images/equipement.jpg" alt="">
           <h3>telephonie IP</h3>
           <p> telephones IP, PBX, Casques VoIP</h3>
           <div class="alignements_icones">
@@ -195,7 +195,7 @@
           </div>
       </article>
        <article class="card" data-tilt>
-          <img src="../vue/images/a.png" alt="">
+          <img src="../vue/images/cable1.jpg" alt="">
           <h3>Equipements reseaux</h3>
           <p> Switches</h3>
           <div class="alignements_icones">
