--- a/vue/formationpratique.html
+++ b/vue/formationpratique.html
@@ -54,7 +54,7 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-          <img src="../vue/images/a.png" alt="">
+          <img src="../vue/images/h.png" alt="">
           <h3>Formations pratiques</h3>
           <p> Atelier reseauxsur Equipements reels</h3>
           <div class="alignements_icones">
@@ -66,7 +66,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/b.jpg" alt="">
+        <img src="../vue/images/h.jpg" alt="">
           <h3>Formations pratiques</h3>
           <p> Projet pratique en cybersecurity</h3>
           <div class="alignements_icones">
@@ -78,7 +78,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/c.png" alt="">
+        <img src="../vue/images/panneaux.jpg" alt="">
           <h3>Formations pratiques</h3>
           <p> Developpement d'application</h3>
           <div class="alignements_icones">
