--- a/vue/installatin.html
+++ b/vue/installatin.html
@@ -54,7 +54,7 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-          <img src="../vue/images/h.jpg" alt="">
+          <img src="../vue/images/controle.jpg" alt="">
           <h3>Installatin</h3>
           <p> Mise en place du LAN</h3>
           <div class="alignements_icones">
@@ -77,7 +77,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/windows.jpg" alt="">
+        <img src="../vue/images/equipement.jpg" alt="">
           <h3>Deploements serveurs</h3>
           <p> Windows server</h3>
           <div class="alignements_icones">
