--- a/vue/formation_certification.html
+++ b/vue/formation_certification.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div class="user_message">
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 </div>
 <canvas id="bg-canvas"></canvas>
@@ -54,7 +54,7 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-          <img src="../vue/images/a.png" alt="">
+          <img src="../vue/images/suitche.jpg" alt="">
           <h3>Equipements reseaux</h3>
           <p> Switches</h3>
           <div class="alignements_icones">
@@ -78,7 +78,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/c.png" alt="">
+        <img src="../vue/images/equipement.jpg" alt="">
           <h3>Equipements reseaux</h3>
           <p> Point d'access Wi-Fi</h3>
           <div class="alignements_icones">
@@ -90,7 +90,7 @@
       </article>
 
       <article class="card" data-tilt>
-       <img src="../vue/images/d.jpg" alt="">
+       <img src="../vue/images/controleur.jpg" alt="">
           <h3>telephonie IP</h3>
           <p> telephones IP, PBX, Casques VoIP</h3>
           <div class="alignements_icones">
@@ -194,18 +194,6 @@
             <i class="icon fas fa-share"></i>
           </div>
       </article>
-       <article class="card" data-tilt>
-          <img src="../vue/images/a.png" alt="">
-          <h3>Equipements reseaux</h3>
-          <p> Switches</h3>
-          <div class="alignements_icones">
-            <i class=" icon fa fa-comment"></i>
-            <i class=" icon fas fa-shopping-cart" ></i>
-            <i class=" icon fas fa-star"></i>
-            <i class="icon fas fa-share"></i>
-          </div>
-      </article>
-
       <article class="card" data-tilt>
         <img src="../vue/images/b.jpg" alt="">
           <h3>securite</h3>
