--- a/vue/installatin.html
+++ b/vue/installatin.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div class="user_message">
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 </div>
 <canvas id="bg-canvas"></canvas>
@@ -54,7 +54,7 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-          <img src="../vue/images/controle.jpg" alt="">
+          <img src="../vue/images/h.jpg" alt="">
           <h3>Installatin</h3>
           <p> Mise en place du LAN</h3>
           <div class="alignements_icones">
@@ -77,7 +77,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/equipement.jpg" alt="">
+        <img src="../vue/images/windows.jpg" alt="">
           <h3>Deploements serveurs</h3>
           <p> Windows server</h3>
           <div class="alignements_icones">
@@ -112,7 +112,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/armoire.jpg" alt="">
+        <img src="../vue/images/cable1.jpg" alt="">
           <h3>Cablage&accessoires</h3>
           <p> armoires</h3>
           <div class="alignements_icones">
