--- a/vue/services.html
+++ b/vue/services.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div class="user_message">
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 </div>
 <canvas id="bg-canvas"></canvas>
@@ -54,20 +54,20 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-        <img src="../vue/images/cable.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
-          <p> L'un de nos produits les plus demandes</h3>
+          <img src="../vue/images/suitche.jpg" alt="">
+          <h3>Equipements reseaux</h3>
+          <p> Switches</h3>
           <div class="alignements_icones">
-             <i class=" icon fa fa-comment"></i>
+            <i class=" icon fa fa-comment"></i>
             <i class=" icon fas fa-shopping-cart" ></i>
             <i class=" icon fas fa-star"></i>
             <i class="icon fas fa-share"></i>
           </div>
-      </article>
+      </article> 
 
       <article class="card" data-tilt>
         <img src="../vue/images/controleur.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -79,7 +79,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/controle.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -91,7 +91,7 @@
 
       <article class="card" data-tilt>
        <img src="../vue/images/h.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -102,54 +102,7 @@
       </article>
         <article class="card" data-tilt>
         <img src="../vue/images/suitche.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
-          <p> L'un de nos produits les plus demandes</h3>
-          <div class="alignements_icones">
-            <i class=" icon fa fa-comment"></i>
-            <i class=" icon fas fa-shopping-cart" ></i>
-            <i class=" icon fas fa-star"></i>
-            <i class="icon fas fa-share"></i>
-          </div>
-      </article>
-
-      <article class="card" data-tilt>
-        <img src="../vue/images/image.png" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
-          <p> L'un de nos produits les plus demandes</h3>
-          <div class="alignements_icones">
-            <i class=" icon fa fa-comment"></i>
-            <i class=" icon fas fa-shopping-cart" ></i>
-            <i class=" icon fas fa-star"></i>
-            <i class="icon fas fa-share"></i>
-          </div>
-      </article>
-
-      <article class="card" data-tilt>
-        <img src="../vue/images/image6.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
-          <p> L'un de nos produits les plus demandes</h3>
-          <div class="alignements_icones">
-            <i class=" icon fa fa-comment"></i>
-            <i class=" icon fas fa-shopping-cart" ></i>
-            <i class=" icon fas fa-star"></i>
-            <i class="icon fas fa-share"></i>
-          </div>
-      </article>
-
-      <article class="card" data-tilt>
-       <img src="../vue/images/image6.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
-          <p> L'un de nos produits les plus demandes</h3>
-          <div class="alignements_icones">
-            <i class=" icon fa fa-comment"></i>
-            <i class=" icon fas fa-shopping-cart" ></i>
-            <i class=" icon fas fa-star"></i>
-            <i class="icon fas fa-share"></i>
-          </div>
-      </article>
-      <article class="card" data-tilt>
-        <img src="../vue/images/a.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -161,7 +114,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/b.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -172,8 +125,8 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/a.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+        <img src="../vue/images/image6.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -184,8 +137,55 @@
       </article>
 
       <article class="card" data-tilt>
-       <img src="../vue/images/d.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+       <img src="../vue/images/image6.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
+          <p> L'un de nos produits les plus demandes</h3>
+          <div class="alignements_icones">
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
+          </div>
+      </article>
+      <article class="card" data-tilt>
+        <img src="../vue/images/equipement.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
+          <p> L'un de nos produits les plus demandes</h3>
+          <div class="alignements_icones">
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
+          </div>
+      </article>
+
+      <article class="card" data-tilt>
+        <img src="../vue/images/controle.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
+          <p> L'un de nos produits les plus demandes</h3>
+          <div class="alignements_icones">
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
+          </div>
+      </article>
+
+      <article class="card" data-tilt>
+        <img src="../vue/images/cable.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
+          <p> L'un de nos produits les plus demandes</h3>
+          <div class="alignements_icones">
+            <i class=" icon fa fa-comment"></i>
+            <i class=" icon fas fa-shopping-cart" ></i>
+            <i class=" icon fas fa-star"></i>
+            <i class="icon fas fa-share"></i>
+          </div>
+      </article>
+
+      <article class="card" data-tilt>
+       <img src="../vue/images/h.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -195,8 +195,8 @@
           </div>
       </article>
        <article class="card" data-tilt>
-        <img src="../vue/images/c.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+        <img src="../vue/images/camera.jpg" alt="">
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -208,7 +208,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -220,7 +220,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -232,7 +232,7 @@
 
       <article class="card" data-tilt>
        <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
