--- a/vue/support.html
+++ b/vue/support.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div class="user_message">
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 </div>
 <canvas id="bg-canvas"></canvas>
