--- a/vue/formationpratique.html
+++ b/vue/formationpratique.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 <div class="user_message">
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 </div>
 <canvas id="bg-canvas"></canvas>
@@ -54,7 +54,7 @@
   <section class="reveal" id="features">
     <div class="grid">
         <article class="card" data-tilt>
-          <img src="../vue/images/h.png" alt="">
+          <img src="../vue/images/windows.jpg" alt="">
           <h3>Formations pratiques</h3>
           <p> Atelier reseauxsur Equipements reels</h3>
           <div class="alignements_icones">
@@ -66,7 +66,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/h.jpg" alt="">
+        <img src="../vue/images/b.jpg" alt="">
           <h3>Formations pratiques</h3>
           <p> Projet pratique en cybersecurity</h3>
           <div class="alignements_icones">
@@ -78,7 +78,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/panneaux.jpg" alt="">
+        <img src="../vue/images/cable.jpg" alt="">
           <h3>Formations pratiques</h3>
           <p> Developpement d'application</h3>
           <div class="alignements_icones">
@@ -89,7 +89,7 @@
       </article>
 
       <article class="card" data-tilt>
-       <img src="../vue/images/d.jpg" alt="">
+       <img src="../vue/images/controle.jpg" alt="">
           <h3>Formations pratiques</h3>
           <p>  systeme de gestion interne</h3>
           <div class="alignements_icones">
@@ -112,7 +112,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/image1.png" alt="">
+        <img src="../vue/images/controleur.jpg" alt="">
           <h3>Cablage&accessoires</h3>
           <p> armoires</h3>
           <div class="alignements_icones">
@@ -194,7 +194,7 @@
           </div>
       </article>
        <article class="card" data-tilt>
-          <img src="../vue/images/a.png" alt="">
+          <img src="../vue/images/equipement.jpg" alt="">
           <h3>Equipements reseaux</h3>
           <p> Switches</h3>
           <div class="alignements_icones">
@@ -218,7 +218,7 @@
       </article>
 
       <article class="card" data-tilt>
-        <img src="../vue/images/image5.jpg" alt="">
+        <img src="../vue/images/h.jpg" alt="">
           <h3>Energie</h3>
           <p> Panneaux solaire</h3>
           <div class="alignements_icones">
