--- a/vue/index.html
+++ b/vue/index.html
@@ -5,12 +5,18 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>TermaDevs — Futuriste</title>
 <link rel="stylesheet" href="styles/style.css" />
+<link rel="stylesheet" href="../vue/font-awesome/css/all.min.css">
 </head>
+<style>
+  
+
+
+</style>
 <body>
 <div class="user_message" >
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 <canvas id="bg-canvas"></canvas>
 
