--- a/vue/inscription.html
+++ b/vue/inscription.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="font-awesome/css/all.min.css">
   <style>
     * { margin:0; 
-      padding:0;
-       box-sizing:border-box;
+        padding:0;
+        box-sizing:border-box;
         font-family: Arial, sans-serif; 
       }
     .interface1{
@@ -204,7 +204,7 @@
           </header>
         <div class="content">
           <!-- Panneau de gauche -->
-          <img src="image1.jpg" alt="">
+          <img src="./images/image8.jpg" alt="">
             <div class="left-panel">
                   <h1>CREATE A CDR REPORT YOU ARE PROUD OF!</h1>
                   <p>100% Success Guarantee.<br>
