--- a/vue/produits.html
+++ b/vue/produits.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 <div class="user_message">
-  <a href=""><div class="panier" data-tooltip="panier"></div></a>
-  <a href=""><div class="notification" data-tooltip="notification"></div></a>
-  <a href=""><div class="profil" data-tooltip="Profil"></div></a>
+  <a href=""><div class="panier" data-tooltip="panier"><i class=" icon fas fa-shopping-cart" ></i></div></a>
+  <a href=""><div class="notification" data-tooltip="notification"><i class=" icon fas fa-bell" ></i></div></a>
+  <a href=""> <div class="profil" data-tooltip="Profil"><i class=" icon fas fa-user" ></i></div></a>
 </div>
 </div>
 <canvas id="bg-canvas"></canvas>
@@ -56,7 +56,7 @@
     <div class="grid">
       <article class="card" data-tilt>
           <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -68,7 +68,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images//image2.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -80,7 +80,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/image1.png" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -92,7 +92,7 @@
 
       <article class="card" data-tilt>
        <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
            <i class=" icon fa fa-comment"></i>
@@ -115,7 +115,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/image1.png" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -127,7 +127,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -139,7 +139,7 @@
 
       <article class="card" data-tilt>
        <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
            <i class=" icon fa fa-comment"></i>
@@ -186,7 +186,7 @@
 
       <article class="card" data-tilt>
        <img src="../vue/images/image7.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -197,7 +197,7 @@
       </article>
        <article class="card" data-tilt>
         <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -209,7 +209,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
@@ -221,7 +221,7 @@
 
       <article class="card" data-tilt>
         <img src="../vue/images/equipement.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
              <i class=" icon fa fa-comment"></i>
@@ -233,7 +233,7 @@
 
       <article class="card" data-tilt>
        <img src="../vue/images/b.jpg" alt="">
-          <h3>Ticot orginal pour les garcons</h3>
+          <h3>Tricot orginal pour les garcons</h3>
           <p> L'un de nos produits les plus demandes</h3>
           <div class="alignements_icones">
             <i class=" icon fa fa-comment"></i>
