correction et centralisation de menus

--- a/Admin/equipements_.html
+++ b/Admin/equipements_.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../vue/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="../vue/styles/style.cs">
+    <link rel="stylesheet" href="../vue/styles/stylemenu.css">
 </head>
 <style>
     *{
@@ -160,18 +160,7 @@ main{
                     <h2>Equipements</h2>
                 </header>
                 <div class="container">
-                    <div class="sidebar">
-                        <ul>
-                             <li><a href="accueil.html"><i class="fas fa-home"></i> Accueil</a></li>
-                            <li><a href="formation.html"><i class="fas fa-folder"></i> Formations</a></li>
-                            <li><a href="participant.html"><i class="fas fa-users"></i> Participants</a></li>
-                            <li><a href="formation.html"><i class="fas fa-user-tie"></i> Formateurs</a></li>
-                            <li><a href="equipement.html"><i class="fas fa-box"></i> Équipements</a></li>
-                            <li><a href="commande.html"><i class="fas fa-shopping-cart"></i> Commandes</a></li>
-                            <li><a href="paiement.html"><i class="fas fa-credit-card"></i> Paiements</a></li>
-                            <li><a href="rapport.html"><i class="fas fa-file-alt"></i> Rapports</a></li>
-                        </ul>
-                    </div>
+                    
                     <main>
                         <div class="principal">
                             <table>
